// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTakeover renders scheduled text when scheduledRemovalDayAndTimeText prop is set 1`] = `
<div
  className="tablet:padding-y-10 text-center"
>
  <Title>
    We’re undergoing maintenance
  </Title>
  <Lead
    className="margin-x-auto measure-2"
  >
    <Trans
      components={
        Object {
          "what-to-expect-link": <a
            href="https://www.mass.gov/guides/what-to-expect-when-you-apply-for-paid-family-and-medical-leave-benefits"
          />,
        }
      }
      i18nKey="components.maintenanceTakeover.scheduled"
      values={
        Object {
          "scheduledRemovalDayAndTime": "Sunday, March 7th at 10:00 p.m. EST",
        }
      }
    />
  </Lead>
</div>
`;

exports[`MaintenanceTakeover renders scheduled text when scheduledRemovalDayAndTimeText prop is set 2`] = `
Array [
  "We are performing scheduled maintenance to improve functionality and our overall service. Paid leave applications will be back online on ",
  <strong
    key="strong-1"
  >
    Sunday, March 7th at 10:00 p.m. EST
  </strong>,
  ".",
  <br
    key="br-3"
  />,
  <br
    key="br-4"
  />,
  "When we are back, you will be able to access your existing applications or create a new one. Employers will be able to respond to information requests. We appreciate your understanding and patience. To get ready, review ",
  <a
    href="https://www.mass.gov/guides/what-to-expect-when-you-apply-for-paid-family-and-medical-leave-benefits"
    key="6"
  >
    what to expect when you apply for paid family and medical leave benefits
  </a>,
  ".",
]
`;

exports[`MaintenanceTakeover renders with the expected content 1`] = `
<div
  className="tablet:padding-y-10 text-center"
>
  <Title>
    We’re undergoing maintenance
  </Title>
  <Lead
    className="margin-x-auto measure-2"
  >
    This page is currently unavailable while the site is undergoing maintenance. Please check back shortly.
  </Lead>
</div>
`;
